<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:layerType="software"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetingStarts"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/standUpStart"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/standUpStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/retroOne"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/retroOne"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/retroTwo"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/retroTwo"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/turnAround"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/turnAround"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetingEnds"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/standUpEnd"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/standUpEnd"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/closingTime"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/closingTime"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/takeMeAway"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/takeMeAway"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/failure"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:text="@string/failure"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>